<resources>
    <string name="screen_translation_settings">Screen translation settings</string>
    <string name="screen_translation_placeholder">Screen translation settings will be available in a future update.</string>
</resources>
